# car-ads-platform

./: .env  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/src/api/: auth.py  cars.py  main.py
backend/src/bot/: ai_service.py  main.py  schemas.py
backend/src/core/: celery_app.py  config.py  database.py  security.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2026_02_26_2036-df8fd2068229_init_schema.py  2026_02_26_2039-81ddb16c16f6_seed_admin.py  2026_02_27_1942-56f29e316f83_add_car_model.py  2026_03_03_1051-e20cee93a186_add_ai_description.py  2026_03_04_1900-6e9a710f88bd_add_mileage_and_image_url.py  2026_03_04_1920-8d23118857fe_expand_car_model_length.py  2026_03_08_1139-781d00edeb55_add_mileage_and_image.py  2026_03_08_1918-945ec560b38e_initial_fresh_start.py
backend/src/models/: __init__.py  car.py  user.py
backend/src/repositories/: car.py
backend/src/schemas/: auth.py  car.py
backend/src/scraper/: engine.py
backend/src/services/: ai_enrichment.py  ai_generator.py  scraper.py
backend/src/worker/: tasks.py
frontend/: Dockerfile  index.html  nginx.conf  package.json
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: axios.js
frontend/src/pages/: Cars.jsx  Login.jsx
